--- a/vercel.json
+++ b/vercel.json
@@ -2,63 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "project/wsgi.py",
-      "use": "@vercel/python",
-      "config": { 
-        "maxLambdaSize": "15mb", 
-        "runtime": "python3.9"
-      }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "staticfiles_build"
-      }
+      "src": "project/index.py",
+      "use": "@vercel/python"
     }
   ],
   "routes": [
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/media/(.*)",
-      "dest": "/media/$1"
-    },
-    {
-      "src": "/admin/(.*)",
-      "dest": "project/wsgi.py"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "project/wsgi.py"
-    },
-    {
-      "src": "/auth/(.*)",
-      "dest": "project/wsgi.py"
-    },
-    {
-      "src": "/swagger/(.*)",
-      "dest": "project/wsgi.py"
-    },
-    {
-      "src": "/redoc/(.*)",
-      "dest": "project/wsgi.py"
-    },
-    {
       "src": "/(.*)",
-      "dest": "project/wsgi.py"
+      "dest": "project/index.py"
     }
-  ],
-  "env": {
-    "DJANGO_SETTINGS_MODULE": "project.settings",
-    "PYTHONPATH": ".",
-    "DJANGO_DEBUG": "False"
-  },
-  "functions": {
-    "project/wsgi.py": {
-      "maxDuration": 30
-    }
-  }
+  ]
 }
