--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿asgiref==3.8.1
+asgiref==3.8.1
 certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
@@ -36,3 +36,4 @@ typing_extensions==4.14.0
 tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
+whitenoise==6.7.0
